# SongPlayer

./: .gitignore  CMakeLists.txt
SourceFiles/: AudioInfo.hpp  AudioInfoBox.qml  CMakeLists.txt  ImageButton.qml  Main.qml  PlayerController.cpp  PlayerController.hpp  PlaylistPanel.qml  main.cpp
src/: AudioInfo.cpp  AudioSearchModel.cpp  AudioSearchModel.hpp  CMakeLists.txt  Main.qml  PlayerController.cpp  PlaylistPanel.qml  SearchField.qml  SearchPanel.qml  main.cpp
